# pallet-example-planktoscope-wio

./: CHANGELOG.md  README.md  forklift-env.yml  forklift-pallet.yml  forklift-repository.yml
.github/workflows/: bridge-build.yml  check.yml
bridge/: Dockerfile  main.py  pyproject.toml
deployments/: avahi-daemon.deploy.yml  caddy-ingress.deploy.yml  chronyd.deploy.yml  cockpit.deploy.yml  device-portal.deploy.yml  dhcpcd.deploy.yml  dnsmasq.deploy.yml  docker.deploy.yml  exim.deploy.yml  filebrowser-datasets.deploy.yml  filebrowser-root.deploy.yml  gpsd.deploy.yml  mosquitto.deploy.yml  nodered-sandbox.deploy.yml  planktoscope-controller.deploy.yml  planktoscope-docs.yml  planktoscope-node-red-dashboard.deploy.yml  planktoscope-processing-segmenter.deploy.yml  portainer.deploy.yml  pslocal.deploy.yml  pslocal.do-not-deploy.yml  simple-demo.deploy.yml  sshd.deploy.yml
deployments/applications/: cockpit.deploy.yml  device-portal.deploy.yml  filebrowser-datasets.deploy.yml  filebrowser-root.deploy.yml  planktoscope-controller.deploy.yml  planktoscope-docs.deploy.yml  planktoscope-node-red-dashboard.deploy.yml  planktoscope-processing-segmenter.deploy.yml  portainer.deploy.yml
deployments/apps/: README.md  cockpit.deploy.yml  device-portal.deploy.yml  dozzle.deploy.yml  filebrowser-datasets.deploy.yml  filebrowser-root.deploy.yml  grafana.deploy.yml  node-exporter.deploy.yml  portainer.deploy.yml  ps-controller.deploy.yml  ps-docs.deploy.yml  ps-node-red-dashboard.deploy.yml  ps-processing-segmenter.deploy.yml  wio-bridge.deploy.yml
deployments/host/: README.md  (+10 more)
(+44 files in other folders)
